added aws s3 capabilities
